crates/test-ui/ui/block_carrying_lifetime.stderr
error[E0521]: borrowed data escapes outside of function
 --> ui/block_carrying_lifetime.rs
  |
  | fn tries_to_retain_past_given_lifetime(block: &Block<dyn Fn() + '_>) {
  |                                        -----
  |                                        |
  |                                        `block` is a reference that is only valid in the function body
  |                                        has type `&Block<(dyn Fn() + '1)>`
...
  |         thread_local.set(block.copy()).unwrap();
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |         |
  |         `block` escapes the function body here
  |         argument requires that `'1` must outlive `'static`
